# Chart-User-Action

./: .gitignore  README.md
Doc/: README.txt
QML/src/: CMakeLists.txt  QMLChartUserAction.pro
QML/src/QML/: LineSeries.qml  Main.qml  MarkerTool.qml  PointerTool.qml
QTCpp/: SubDirProj.pro
QTCpp/TestApplication/: ChartUserActionTestApp.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QTCpp/build-CppChartUserAction-Desktop_Qt_6_6_1_MSVC2019_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
QTCpp/src/: CppChartUserAction.pro  actionhandler.cpp  actionhandler.h  chartuseraction.cpp  chartuseraction.h  chartuseraction.ui
QTCpp/src/Tools/: cchartmarker.cpp  cchartmarker.h  cchartmeasure.cpp  cchartmeasure.h  cchartpointer.cpp  cchartpointer.h  cchartselector.cpp  cchartselector.h  cchartshape.cpp  cchartshape.h  chartmarker.cpp  chartmarker.h  chartmeasure.cpp  chartmeasure.h  chartpointer.cpp  chartpointer.h  chartselector.cpp  chartselector.h  chartshape.cpp  chartshape.h  iplottool.cpp  iplottool.h
